# kde-auto-brightness

./: CMakeLists.txt  README.md
kded-auto-brightness/: AmbientLightSensor.cpp  AmbientLightSensor.h  AutoBrightness.cpp  AutoBrightness.h  CMakeLists.txt  Utils.h  auto_brightness.json  config.kcfg  config.kcfgc
